card spacing fix

--- a/src/pages/components/catalog/catalog.scss
+++ b/src/pages/components/catalog/catalog.scss
@@ -202,7 +202,7 @@
     flex-grow: 1;
     flex-grow: 1;
     grid-template-columns: repeat(auto-fit, 290px);
-    grid-column-gap: 2em;
+    grid-column-gap: 1.8em;
     grid-row-gap: 2em;
 
     .project-card{
